Fixed footer icon padding on small mobiles

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -186,4 +186,8 @@
         margin-left: 5%;
         margin-right: 5%;
     }
+
+    .container i {
+        margin: 2% 5%;
+    }
 }
